--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -4,3 +4,15 @@ body {
     padding-top: 50px;
     background-color: darkseagreen;
 }
+
+.radio {
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+}
+
+.check {
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+}
