--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -5,14 +5,12 @@ body {
     background-color: darkseagreen;
 }
 
-.radio {
+input[type=text], select {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
     display: inline-block;
-    text-align: left;
-    vertical-align: top;
-}
-
-.check {
-    display: inline-block;
-    text-align: left;
-    vertical-align: top;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
